Initial blog setup

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ user-scalable=no"
         <span>NotHR</span>
         <ul>
           <li><a href="">Notes</a></li>
-          <li><a href="">Blog</a></li>
+          <li><a href="/blog.html">Blog</a></li>
         </ul>
       </div>
     </nav>
