--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       content="width=device-width, initial-scale=1.0, 
 user-scalable=no"
     />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6064108596957607"
+     crossorigin="anonymous"></script>
     <title>NothHR - Work . Code . Play</title>
     <link rel="stylesheet" href="style.css" />
   </head>
