--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@ user-scalable=no"
       <h2>I love to code and play with tech</h2>
     </section>
     <footer>Harshith reddy - 2022</footer>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6064108596957607"
+     crossorigin="anonymous"></script>
+<!-- test -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6064108596957607"
+     data-ad-slot="4671951213"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
