--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ user-scalable=no"
       <img src="./NotHR.png" alt="pfp" />
       <h1>Hi, I am Harshith</h1>
       <h2>I love to code and play with tech</h2>
+     <iframe id='kofiframe' src='https://ko-fi.com/nothr/?hidefeed=true&widget=true&embed=true&preview=true' style='border:none;width:100%;padding:4px;background:#f9f9f9;' height='712' title='nothr'></iframe>
     </section>
     <footer>Harshith reddy - 2022</footer>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6064108596957607"
