--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@ user-scalable=no"
       <h1>Hi, I am Harshith</h1>
       <h2>I love to code and play with tech</h2>
     </section>
-    <footer>Harshith reddy - 2022</footer>
+    <footer>Harshith reddy ©️ <span id='footer'></span></footer>
+    var dt = new Date();
+document.getElementById('footer').innerHTML=dt;
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6064108596957607"
      crossorigin="anonymous"></script>
 <!-- test -->
