--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ user-scalable=no"
     </section>
     <footer>Harshith reddy ©️ <span id='footer'></span></footer>
     var dt = new Date();
-document.getElementById('footer').innerHTML=dt;
+    <script>var dt = new Date();
+document.getElementById('date-time').innerHTML=dt;</script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6064108596957607"
      crossorigin="anonymous"></script>
 <!-- test -->
